--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.1.0"
+        "php": "^8.0",
+        "laravel/framework": "^8.0",
+        "laravel/nova": "^4.0"
     },
     "autoload": {
         "psr-4": {
@@ -25,5 +27,11 @@
         "sort-packages": true
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "repositories": [
+    {
+      "type": "composer",
+      "url": "https://nova.laravel.com"
+    }
+  ]
 }
